--- a/websites/style-2.css
+++ b/websites/style-2.css
@@ -2,12 +2,13 @@
 body {
     padding-left: 20%;
     padding-right: 20%;
-    background-color: antiquewhite;
-
+    background-color: antiquewhite;   
 }
 
 h1 {
     font-size: 72px;
+    margin-top: 0;
+    margin-bottom: 56px;
     text-align: center;
     letter-spacing: 4px;
     font-family: sans-serif;
@@ -16,12 +17,12 @@ h1 {
 
 h2 {
     font-size: 30px;
-    margin-bottom: 64px;  
+    margin-bottom: 64px;     
     font-family: sans-serif;
     text-align: center;
     line-height: 1.4;
     text-transform: uppercase;
-    font-weight: normal;   
+    font-weight: normal;
     color: brown;
 }
 
