--- a/websites/style-4.css
+++ b/websites/style-4.css
@@ -1,10 +1,10 @@
 /* ==== PAGE WIDTH ==== */
 body {
     padding-left: 20%;
-    padding-right: 20%;
-    font-family: sans-serif; 
-    background-color: #1f364d;
-}  
+    padding-right: 20%
+}
+
+body { font-family: sans-serif;  background-color: #1f364d; }
 
 h1 {
     font-size: 64px;
@@ -35,5 +35,5 @@ p {
     font-size: 18px;
     margin-top: 0;
     line-height: 1.6;
-    color: #81b8cd;
+    color:#81b8cd;
 }
