--- a/websites/style-5.css
+++ b/websites/style-5.css
@@ -1,17 +1,18 @@
-/* Browser resets */
-img { display: block; width: 100%; height: auto }  
+/* ==== Browser resets  ==== */
+img { display: block; width: 100%; height: auto }
+
 
 /* Web page */
 body {
     background-color: #FFFFBD;
     padding-left: 20%;
     padding-right: 20%;
-    padding-bottom:40px;
+    padding-bottom:40px
 }
 
 /* Main heading */
 h1 {
-    font-family: 'Merriweather', serif;    
+    font-family: serif;    
     font-size: 84px;
     font-weight: normal;
     color: #3434B0;
@@ -22,7 +23,7 @@ h1 {
 
 /* Small headings */
 h2 {
-    font-family: 'Merriweather', serif;    
+    font-family: serif;    
     font-size: 26px;
     color:#3434B0;
     line-height: 1.4;
@@ -31,7 +32,7 @@ h2 {
 
 /* Smaller headings */
 h3 {
-    font-family: 'Merriweather', serif;    
+    font-family: serif;    
     font-size: 42px;
     color: #000;
     letter-spacing:-2px;
@@ -41,7 +42,7 @@ h3 {
 
 /* Text paragraphs */
 p {
-    font-family: 'Merriweather', serif;
+    font-family: serif;
     font-size: 22px;
     color: #455C80;
     line-height: 1.6;
@@ -49,7 +50,11 @@ p {
     margin-bottom: 22px;
 }
 
-img {
-    margin-bottom: 32px;
-    box-shadow: 8px 10px 8px #888
+/* Images */
+img { 
+    margin-bottom: 42px;
+    /* Drop shadow effect at right and bottom of image */
+    box-shadow: 8px 10px 8px #888;    
 }
+
+
