--- a/websites/style-7.css
+++ b/websites/style-7.css
@@ -14,7 +14,7 @@ body {
 
 /* Main heading */
 h1 {
-	font-family: serif;
+	font-family: 'Neucha', serif;
 	font-weight: bold;
     font-size: 112px;
     color: #fff;
@@ -26,7 +26,7 @@ h1 {
 
 /* Small headings */
 h2 {
-	font-family: serif;
+	font-family: 'Neucha', serif;
     font-weight: bold;
     font-size: 38px;
     color: #fff;
@@ -39,7 +39,7 @@ h2 {
 
 /* Smaller headings */
 h3 {
-	font-family: serif;
+	font-family: 'Neucha', serif;
     font-weight: bold;
     font-size: 56px;
     color: #fff;
@@ -52,7 +52,7 @@ h3 {
 
 /* Text paragraphs */
 p {
-    font-family: serif;
+    font-family: 'Neucha', serif;
     font-size: 28px;
     color: #fff;
     text-align: center;
@@ -66,3 +66,4 @@ img {
     margin-top: 64px;
     margin-bottom: 12px
 }
+
