--- a/it4women/exercises/final-media/style-11.css
+++ b/it4women/exercises/final-media/style-11.css
@@ -5,12 +5,10 @@ body { min-height: 100% }
 img { width: 100%; height: auto; display: block }
 
 /* Desktops */
-@media min-width:768px) { .container-block { padding: 4% 18% } }
-
+@media (min-width:768px) { .container-block { padding: 4% 18% } }
 
 /* Mobiles */
 @media (max-width:767px) { .container-block { padding: 12% 8% } }
-
 
 /* Main heading */
 .container-block h1 {
@@ -49,16 +47,6 @@ img { width: 100%; height: auto; display: block }
     color: #fff;
     line-height: 1.8;   
     margin-bottom: 20px;
-}
-
-/* Desktops: inter-line text spacing for paragraphs */
-@media (min-width:768px) { 
-    .container-block p { line-height: 1.8 }
-}
-
-/* Mobiles: inter-line text spacing for paragraphs */
-@media (max-width:767px) {
-    .container-block p { line-height: 1.6 }
 }
 
 /* Last paragraph at bottom of container block */
