--- a/it4women/exercises/final-bootstrap-menu-footer/after/assets/css/bootstrap-menu-footer.css
+++ b/it4women/exercises/final-bootstrap-menu-footer/after/assets/css/bootstrap-menu-footer.css
@@ -1,3 +1,10 @@
+/* ====== Sans-serif font for navbar and footer text links ======= */
+#mainNav .container,
+footer ul.footer-links li a,
+footer a.privacy-legal {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
 /* =========== Navbars spacing ========== */
 
 #mainNav .container { padding-top: 0; padding-bottom: 0 }
