--- a/it4women/js-new/assets/css/web-design-js.css
+++ b/it4women/js-new/assets/css/web-design-js.css
@@ -3,6 +3,8 @@
 body, html { height: 100% }
 body { max-width: 1600px; font-family: sans-serif }
 img { width: 100%; height: auto; display: block }
+table tr td img { width: 100%; height: auto; display: block }
+
 html { scroll-behavior: smooth; scroll-padding-top: 72px }
 
 /* Default font and colours */
@@ -300,7 +302,8 @@ a.fancy-link:hover, a.fancy-link:active { color: #000; border-bottom-color: #000
 @media all and (min-width:768px) {
 	.jumbotron { 
 		text-align: left;
-		padding: 4% 20% 4% 20%
+		padding: 4% 20% 4% 20%;
+		margin-bottom:32px;
 	}
 	.jumbotron h2 { margin-bottom: 3% }
 	.jumbotron h3 { margin-bottom: 4% }
@@ -511,6 +514,10 @@ table.table-gray {
 	padding:20px 20px 10px 20px;
 }
 
+table.table-gray td {
+  vertical-align: top;
+}
+
 
 p.defhead0 {
 	font-weight: bold;
@@ -528,4 +535,10 @@ p.deftext0 {
 	border-right: solid 1px yellow;
 	border-bottom: solid 1px yellow;
 	margin-bottom:48px;
+}
+h2 span, h3 span {
+    font-family: 'Roboto Mono', monospace;
+    font-weight: bold;
+    font-weight: 500;
+    letter-spacing: -1px;
 }
