--- a/it4women/projects/project-home/javascript-page.css
+++ b/it4women/projects/project-home/javascript-page.css
@@ -1,3 +1,7 @@
+.wrapper-yellow {
+   background-color:#FFFF99;padding-top:20px; padding-bottom:72px
+}
+
 .js-box {
     border:solid 1px yellow;
     padding:20px;
